--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.36",
+    "debug": "^2.2.0",
     "fastfall": "^1.2.3",
     "fastparallel": "^1.5.3",
     "lru-cache": "^2.6.5",
